# token-standard-detector

./: .env  README.md  docker-compose.yaml  pyproject.toml
detector/: Dockerfile  pyproject.toml
detector/detector/: settings.py  urls.py
detector/standard_verifier/: apps.py  models.py  urls.py  views.py
detector/standard_verifier/erc20/: constants.py
detector/standard_verifier/fixtures/: standard.json
detector/standard_verifier/migrations/: 0001_initial.py
nginx/: default.conf
